assets/css/main.scss
---
---

@import "main";

@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans:wght@300;600&display=swap');

html, body {
  padding: 0;
  margin: 0;
  font-family: 'Open Sans', sans-serif;
}

h1, h2, h3, h4 {
  font-family: 'Merriweather', serif;
}

.hero {
  @media screen and (min-width: 600px) {
    width: 60%;
  }
  
  padding: 24px;
  margin: auto;
  margin-top: 100px;
  font-size: 1.3em;
  line-height: 1.8;
  text-align: center;

  h1 {
    font-family: 'Merriweather', serif;
    font-size: 48px;
  }
}

nav {
  display: table;
  margin: 40px auto;

  a {
    margin: 2em 0.5em;
  }
}

a.button {
  font-weight: 600;
  border: solid 1px #d5e0e7;
  text-decoration: none;
  padding: 10px 20px;
  border-radius: 5px;
  color: #2E4453;
  font-size: 16px;

  &:hover {
    color: #333;
    box-shadow: 0 1px 0 #b0c5d2;
  }
}

.featured-content {
  max-width: 1000px;
  width: 90%;
  margin: 30px auto;
  display: flex;
  font-size: 1.2em;

  &.flip {
    flex-direction: row-reverse;
  }
  
  .info {
    flex: 0.55;

    div {
      margin: 4em 0 0 4em;

      @media screen and (max-width: 600px) {
        margin: 4em 0 0 2em;
      }

      p {
        width: 80%;
        margin-bottom: 42px;
      }
    }

    @media screen and (max-width: 900px) {
      flex: 1;
    }
  }

  .img {
    height: 0px;
    flex: 0.45;
    overflow: hidden;
    padding-bottom: 50%;

    @media screen and (max-width: 900px) {
      display: none;
    }

    img {
      width: 100%;
      border-radius: 15px;
    }
  }

  h3 {
    font-size: 24px;
    margin-bottom: 1.5em;
    position: relative;

    &::after {
      content: '';
      position: absolute;
      top: 1.5em;
      left: 0;
      width: 3em;
      height: 3px;
      background-color: #bebebe;
    }
  }
}

footer {
  display: flex;
  padding: 24px 48px;
  justify-content: space-between;
  align-items: center;
  max-width: 1000px;
  margin: auto;

  span.copyright {
    text-transform: uppercase;
    font-size: 12px;
  }

  span.social-icons {
    font-size: 24px;

    a {
      color: #333;
    }
  }
}

